--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build",
+    "build": "astro build && npx pagefind --site dist",
     "preview": "astro preview",
     "lint": "eslint .",
     "format": "prettier -w .",
@@ -20,9 +20,11 @@
     "groq": "^3.70.0"
   },
   "devDependencies": {
+    "@pagefind/default-ui": "^1.4.0",
     "@types/node": "^22.10.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
+    "pagefind": "^1.4.0",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17",
